testing, bug fixing

--- a/config.toml
+++ b/config.toml
@@ -13,3 +13,4 @@ avg_every = "number-of-frames-to-average"
 whole_region_start = "region-start-as-fraction-of-one"
 whole_region_end = "region-end-as-fraction-of-one"
 peak_criterion = "necessary-height-above-background"
+logging = "logging-true-or-false"
